--- a/pdi-weka-arff-output-plugin/build.properties
+++ b/pdi-weka-arff-output-plugin/build.properties
@@ -1,6 +1,7 @@
 impl.title=PDI ArffOutput plugin step
 impl.productID=pdi-arffoutput-plugin
 ivy.artifact.id=pdi-arffoutput-plugin
+package.id=pdi-arffoutput-plugin-package
 ivy.artifact.group=pentaho
 
 #The root install directory for Kettle
@@ -9,8 +10,10 @@ kettle.plugin.dir=../Kettle/plugins
 project.revision=7.1-SNAPSHOT
 dependency.kettle.revision=7.1-SNAPSHOT
 dependency.weka.revision=3.8.0.1
+dependency.pentaho-metastore.revision=7.1-SNAPSHOT
 dependency.dm-commons.revision=7.1-SNAPSHOT
-lib.dir=libext-ivy
-classes.dir=classes
+dependency.xpp3-min.revision=1.1.3.4.O
+dependency.pentaho-vfs-browser.revision=7.1-SNAPSHOT
+provided.lib.dir=lib-provided
 
 javadoc.packagenames=org.pentaho.*
